--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=900, initial-scale=1.0">
-    <title>Pong Game Simple</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Pong Game</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
